--- a/backlog.html
+++ b/backlog.html
@@ -1,5 +1,9 @@
 <html>
-0
+<head>
+<title>Backlog | Alex Rusher </title>
+  <link ref='stylesheet' href='backlog.css' type='text/css'>
+  
+</head>
 <div>
   <ul>
     <li>
