--- a/backlog.html
+++ b/backlog.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Backlog | Alex Rusher </title>
-  <link ref='stylesheet' href='backlog.css' type='text/css'>
+  <link rel='stylesheet' href='backlog.css'>
   
 </head>
 <div>
